updata more leetcode